Reorganize css links and fix css links
Move css code into three different files to stay organized. This caused
some broken layout so I also fixed some of the broken layout by
readding css links to each html file as necessary.

--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -1,7 +1,4 @@
-* {
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
+
 
 /* Home page */
     h1 {
@@ -51,23 +48,4 @@
         height: 85%;
         width: 95%;
         box-shadow: 0px 0px 15px 5px coral;
-    }
-
-    
-
-
-/* Recipe pages */
-    .header-food-page {
-        font-size: 50px;
-        margin: auto 0px;
-        text-align: center;
-        padding: 10px;
-    }
-
-    img {
-        display: block;
-        width: 95%;
-        height: auto;
-        align-self: center;
-        margin: 10px auto;
     }
